--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <script src="script.js" defer></script>
 </head>
 <body>
 <div class="wrapper">
